--- a/views/base.html
+++ b/views/base.html
@@ -142,7 +142,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0" aria-label="최상단 메뉴" style="">
       <div class="container h-100">
-        <a class="navbar-brand col-1 mb-2" href="/"> <img class="" src="/img/common/CNAI(white).png" width="80px"></a>
+        <a class="navbar-brand w-gnb mb-2" href="/"> <img class="" src="/img/common/CNAI(white).png" width="80px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#gnb" aria-controls="gnb"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -150,7 +150,7 @@
 
         <div class="collapse navbar-collapse" id="gnb">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 Body_2_eng h-100">
-            <li class="nav-item my-auto lineOn">
+            <li class="nav-item  my-auto lineOn text-center ms-4">
               <a class="nav-link text-uppercase Gray_5 h-100 py-0 " href="/company">company</a>
             </li>
 
@@ -169,26 +169,25 @@
             <!-- <li class="nav-item my-auto lineOn">
               <a class="nav-link text-uppercase Gray_5 " href="/community">COMMUNITY</a>
             </li>  -->
-            <li class="ui compact menu nav-item my-auto h-100" style="background: none;">
+            <li class="ui compact menu nav-item my-auto h-100 ms-4" style="background: none;">
               <div class="ui simple dropdown item Gray_5 en d-none d-md-block" id="moveArrow" tabindex="0">
                 COMMUNITY
                 <i class="angle down icon" id="myArrow"></i>
                 <div class="menu bgGray0" tabindex="-1">
-                  <a class = 'item'  href="/community">Publications</a>
+                  <a class="item" href="/community">Publications</a>
                   <a class="item " href="/community">Tech Blog
                     <i class="external alternate icon"></i></a>
                 </div>
               </div>
             </li>
 
-            <div class="ui compact menu nav-item my-auto h-100  d-none d-md-block" style="background: none;">
+            <div class="ui compact menu nav-item ms-3 my-auto h-100  d-none d-md-block" style="background: none;">
               <div class="ui simple dropdown item Gray_5 en text-uppercase " id="moveArrow" tabindex="0">
                 career
                 <i class="angle down icon" id="myArrow"></i>
                 <div class="menu bgGray0" tabindex="-1">
-                  <div class="item"><a class='Gray_5' href="/career">CN.AI Team</a></div>
-                  <div class="item"><a class='Gray_5' href="/community">Recruit<i
-                        class="external alternate icon"></i></a></div>
+                  <div class="item"><a class="Gray_5" href="/career">CN.AI Team</a></div>
+                  <div class="item"><a class="Gray_5" href="/community">Recruit<i class="external alternate icon"></i></a></div>
                 </div>
               </div>
             </div>
@@ -200,7 +199,7 @@
           </li>
 
  
-          <button type="button" class="nav-item btn btn-outline-light me-2 Gray_5 ms-5 gnbBtn" id = ''>CONTACT US</button>
+          <button type="button" class="nav-item btn btn-outline-light me-2 Gray_5 ms-5 gnbBtn" id="">CONTACT US</button>
         </div>
       </div>
     </nav>
@@ -243,12 +242,12 @@
 
   <!-- Footer -->
 
-  <footer class="ui  vertical footer mt-auto segment " style='height: 80vh; background-color: #F2F5F8;'>
+  <footer class="ui  vertical footer mt-auto segment " style='background-color: #F2F5F8;'>
     <div class=" container">
       <div class="row Body_2_eng Gray_1" style="margin-top: 6rem;">
-        <div class='col-8'>
+        <div class='col-lg-8 col-12'>
           <div class='row'>
-            <div class="col-2">
+            <div class="col-lg-2 col-6">
               <h4 class="">Core Tech</h4>
               <div class="ui  link list">
                 <a href="#" class="item lh-lg">Data Warehouse </a>
@@ -257,7 +256,7 @@
 
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-6">
               <h4 class="">Company</h4>
               <div class="ui link list">
                 <a class="item lh-lg" href="#">Our Core Value</a>
@@ -266,7 +265,7 @@
                 <a class="item lh-lg" href="#"> Contact Us</a>
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-6">
               <h4 class="">Career</h4>
               <div class="ui link list">
                 <a class="item lh-lg" href="#">Our Value</a>
@@ -274,7 +273,7 @@
                 <a class="item lh-lg" href="#"> Recruit</a>
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-6">
               <h4 class="">Community</h4>
               <div class="ui link list">
                 <a class="item lh-lg" href="#">Recent News</a>
@@ -282,7 +281,7 @@
                 <a class="item lh-lg" href="#">Tech Blog</a>
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-6">
               <h4 class="">Contact us</h4>
               <div class="ui link list">
                 <a class="item lh-lg footer-text" href="#">사업 제휴</a>
@@ -293,9 +292,7 @@
             </div>
           </div>
         </div>
-        <div class='col-4 Body_2_eng Gray_1'>
-
-
+        <div class='col-lg-4 col-12 Body_2_eng Gray_1'>
           <div class='channel'>
             <h4 class="">Channel</h4>
 
@@ -316,12 +313,10 @@
           </div>
           <p class="my-5 pt-3">Media Kit</p>
           <button class='ui button'>C.I Download</button>
-
-
         </div>
       </div>
 
-      <div class="ui horizontal inverted small divided link list" style="margin-top: 5rem; font-family: 'Apple SD Gothic Neo';
+      <div class="ui horizontal inverted small divided link list" style="margin-top: 5rem; margin-bottom:25vh; font-family: 'Apple SD Gothic Neo';
       font-style: normal;
       font-weight: 700;
       font-size: 0.9rem;
