--- a/views/career.html
+++ b/views/career.html
@@ -172,6 +172,10 @@ background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 
   background: linear-gradient(92.14deg, #7E53FF 9.69%, rgba(126, 83, 255, 0) 73.88%), #5A54F5 !important;
 box-shadow: 0px 0px 40px rgba(52, 79, 255, 0.2), 6px 6px 20px rgba(0, 0, 0, 0.2) !important;
 }
+
+.c-text-2{
+  font-family: made-tommy-outline; font-size: 5.93rem;
+}
 </style>
 
 
@@ -195,7 +199,7 @@ box-shadow: 0px 0px 40px rgba(52, 79, 255, 0.2), 6px 6px 20px rgba(0, 0, 0, 0.2)
         더 빛이 나는 사람들,</h1>
     </div>
     <div class='col-4 d-flex '>
-      <h1 class='Point_1 mt-auto' style='font-family: made-tommy-outline; font-size: 5.93rem;'>CN.TEAMS</h1>
+      <h1 class='Point_1 mt-auto c-text-2' >CN.TEAMS</h1>
     </div>
   </div>
 </section>
@@ -235,10 +239,10 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
         {% for item in say1 %}
         <div class="swiper-slide w-60">
           <div class="card w-100 border-0 rounded-0 ">
-            <img src="img/career/howWeWork/{{ item.id }}.png" alt="{{ item.title   }}">card-img-overlay member2-img p-5
+            <img src="img/career/howWeWork/{{ item.id }}.png" alt="{{ item.title   }}" class = 'card-img-overlay member2-img p-5'>
             <div class="card-img-overlay member{{ loop.index }}-img p-5">
               <div class='row g-0 h-100'>
-                <div class='col-4 d-flex flex-column '>
+                <div class='col-lg-4 d-flex flex-column '>
                   <h5 class="Title_1 Gray_1">{{ item.title | striptags(true) | escape | nl2br}}</h5>
                   <div class='mt-auto '>
                     <p class="Title_3 Gray_0  member{{ loop.index }} transition hidden">{{ item.description }} </p>
@@ -347,7 +351,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
   <div class=' row justify-content-center' style = "margin-top: 30vh;" >
     <h5 class = 'Gray_2 SubTitle_1 text-center'>Our Welfare
     </h5>
-    <h4 class='col-5 Title_2 Gray_1'>아낌없는 지원으로 업무 몰입 뿐 아니라,
+    <h4 class='col-md-5 Title_2 Gray_1'>아낌없는 지원으로 업무 몰입 뿐 아니라,
       팀원들의 성장과 자아실현까지 이끌어갑니다.</h4>
   </div>
 
@@ -357,8 +361,8 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
 {% for s in data %}
 {% if s.question == 6 %}
 
-    <div class='col-3 offset-lg-1 my-5 py-5' data-aos="fade-up" data-aos-delay="{{ (loop.index-25) * 100 }}">
-      <img src='img/career/{{ s.color }}.svg' alt = '{{ s.title }} ' class= 'col-2' >
+    <div class='col-md-3 offset-lg-1 my-5 py-5' data-aos="fade-up" data-aos-delay="{{ (loop.index-25) * 100 }}">
+      <img src='img/career/{{ s.color }}.svg' alt = '{{ s.title }} ' class= 'col-md-2' >
       <h4 class = 'mt-3 Gray_1 Title_3'>{{ s.title }}</h4>
       <h5 class = 'Body_1' style = 'color:#7E7E7E; '>{{ s.content }}</h5>
     </div>
@@ -367,20 +371,19 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
 
 
   </div>
-
 </section>
-<!-- background-color:transparent -->
-<section id='progress' style = 'background-color: #F2F5F8; height: 150vh;'>
 
+<section id='progress' style = 'background-color: #F2F5F8;'>
+  <!-- height: 150vh; -->
 <div style = 'margin-bottom: 6rem; padding-top:12vh '>
   <h1 class='text-center Title_1 Gray_1' >영입 절차 </h1>
   <p class='text-center Point_1 Body_1'>지원 후 2주 내 최종 발표 진행</p>
 </div>
 
   <div class = 'row'>
-    <div class='col-2 Body_1 Gray_0 mt-4' style = 'margin-left : 39vw;'>지원자의 역량을 확인하기 위한
+    <div class='col-md-2 d-none d-md-block Body_1 Gray_0 mt-4' style = 'margin-left : 39vw;'>지원자의 역량을 확인하기 위한
       인적성 적합도 평가 과정</div>
-      <div class='col-2 Body_1 Gray_0' style = 'margin-left: 23vw'>3개월간의 수습 기간 동안
+      <div class='col-md-2 Body_1 Gray_0 d-none d-md-block' style = 'margin-left: 23vw'>3개월간의 수습 기간 동안
         적합도 평가를 통해 정직원 전환 진행</div>
   </div>
 
@@ -389,7 +392,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
     <div class="ui circular segment position-relative border-0 my-auto  c1 border-0 position-relative">
       <div class="circle-text text-white">
         <p class="label mb-2"> 01</p>
-        <div class="col-3 mx-auto mb-3" style="border-bottom: 2px solid white"></div>
+        <div class="col-md-3 mx-auto mb-3" style="border-bottom: 2px solid white"></div>
         <p class="Title_3">서류 평가 </p>
       </div>
       <div class="d-flex position-absolute bottom-0 start-50 translate-middle-x" >
@@ -401,7 +404,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
     <div class="ui circular segment position-relative border-0 my-auto c2">
       <div class = 'circle-text Gray_1'>
         <p class = 'label mb-2'> 02</p>
-        <div class="col-3 mx-auto mb-3" style="border-bottom: 2px solid #4E5968"></div>
+        <div class="col-md-3 mx-auto mb-3" style="border-bottom: 2px solid #4E5968"></div>
         <p class = 'Title_3'>인적성 검사 </p>
       </div>  
       <div class="d-flex position-absolute top-0 start-50 translate-middle-x" >
@@ -412,7 +415,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
     <div class = 'ui circular segment position-relative border-0 my-auto c3'>
       <div class = 'circle-text text-white'>
       <p class = 'label'> 03</p>
-      <div class="col-3 mx-auto mb-3" style="border-bottom: 2px solid white"></div>
+      <div class="col-md-3 mx-auto mb-3" style="border-bottom: 2px solid white"></div>
       <p class = 'Title_3'>역량 / 문화 <br />
         인터뷰</p>
     </div>
@@ -425,7 +428,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
   <div class="ui circular segment position-relative border-0 my-auto c2">
     <div class = 'circle-text Gray_1'>
       <p class = 'label'> 04</p>
-      <div class="col-3 mx-auto mb-3" style="border-bottom: 2px solid #4E5968"></div>
+      <div class="col-md-3 mx-auto mb-3" style="border-bottom: 2px solid #4E5968"></div>
       <p class = 'Title_3'>정직원 채용 </p>
     </div>  
     <div class="position-absolute top-0 start-50 translate-middle-x" >
@@ -434,9 +437,9 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
   </div>  
 
   <div class = 'row mt-4'>
-    <div class='col-2 Body_1 Gray_0' style = 'margin-left : 22vw;'>실무진들의 면밀한 검토를 
+    <div class='col-md-2 Body_1 Gray_0' style = 'margin-left : 22vw;'>실무진들의 면밀한 검토를 
       통한 서류 평가 과정 </div>
-      <div class='col-3 Body_1 Gray_0 mt-4' style = 'margin-left: 20vw'>역량, 컬쳐핏이 CN과 부합하는지 
+      <div class='col-md-3 Body_1 Gray_0 mt-4' style = 'margin-left: 20vw'>역량, 컬쳐핏이 CN과 부합하는지 
         알아보기 위한 역량/문화 인터뷰</div>
   </div>
 
@@ -464,19 +467,10 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
 
 {% block localScript %}
 <script>
-  var swiper = new Swiper(".mySwiper1", {
-    slidesPerView: 'auto',
-    // centeredSlides: true,
-    spaceBetween: 30,
-    grabCursor: true,
-    pagination: {
-      el: ".swiper-pagination",
-      clickable: true,
-    },
-  });
 
-  let swiper2 = new Swiper(".mySwiper2", {
-    slidesPerView: 'auto',
+  makeSwiper  = (className) =>{
+    new Swiper(className, {
+    slidesPerView: 1,
     // centeredSlides: true,
     spaceBetween: 30,
     grabCursor: true,
@@ -484,40 +478,19 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
       el: ".swiper-pagination",
       clickable: true,
     },
+    breakpoints:{
+    640: {
+      slidesPerView: 'auto'
+    }
+  }
   });
+}
 
-  let swiper3 = new Swiper(".mySwiper3", {
-    slidesPerView: 'auto',
-    // centeredSlides: true,
-    spaceBetween: 30,
-    grabCursor: true,
-    pagination: {
-      el: ".swiper-pagination",
-      clickable: true,
-    },
-  });
-
-  let swiper4 = new Swiper(".mySwiper4", {
-    slidesPerView: 'auto',
-    // centeredSlides: true,
-    spaceBetween: 30,
-    grabCursor: true,
-    pagination: {
-      el: ".swiper-pagination",
-      clickable: true,
-    },
-  });
-
-  let swiper5 = new Swiper(".mySwiper5", {
-    slidesPerView: 'auto',
-    // centeredSlides: true,
-    spaceBetween: 30,
-    grabCursor: true,
-    pagination: {
-      el: ".swiper-pagination",
-      clickable: true,
-    },
-  });
+let swiper1 = makeSwiper(".mySwiper1")
+let swiper2 = makeSwiper(".mySwiper2")
+let swiper3 = makeSwiper(".mySwiper3")
+let swiper4 = makeSwiper(".mySwiper4")
+let swiper5 = makeSwiper(".mySwiper5")
 
   $('.menu .item')
     .tab()
@@ -542,8 +515,6 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
       nextEl: ".swiper-button-next",
       prevEl: ".swiper-button-prev",
     }
-
-
   });
 </script>
 {% endblock %}
