--- a/views/community.html
+++ b/views/community.html
@@ -35,7 +35,7 @@
 
 
 {% import 'partials/banner.nj' as box %}
-{{ box.banner('/img/4/1.png', "CN.AI의 소식을 알려드립니다.") }}
+{{ box.banner('/img/4/1.png', 'CN.AI의 소식을 알려드립니다.') }}
 
 
 <section id='news' class='container'>
@@ -70,7 +70,7 @@
         {% for i in data %}
         {% if i.category == 'communityNews'%}
         <a class='row justify-content-between  element-item {{ i.name }} mb-5' data-category = '{{ i.name }}'  href= '{{ i.content }}' target = '_blank' style = 'height: 30vh'>
-          <div class='col-7 position-relative d-flex flex-column'>
+          <div class='col-md-7 position-relative d-flex flex-column'>
             {% if i.name =='syntheticData' %}
             <p class='Label Gray_1'>Synthetic Data</p>
             {% else %}
@@ -79,7 +79,7 @@
             <p class='Title_2 text-dark' >{{i.title}}</p>
             <p class='mt-auto Label Gray_1 date' style='bottom:7vh;' aria-label = 'Date'>{{ i.content2 }}</p>
           </div>
-          <div class='col-4 '>
+          <div class='col-md-4 '>
             <img src="/img/1.jpeg" class="img-fluid h-100" alt="...">
           </div>
         </a>
@@ -104,7 +104,7 @@
   <div class = 'container'>
 <p class = 'Title_1_eng my-5 py-5'>Investment</p>
 
-  <table class="ui very basic table text-light w-100 mb-5 py-5">
+  <table class="table text-light w-100 mb-5 py-5">
     <thead>
       <tr class ='text-whtie'>
         <th>날짜</th>
@@ -125,17 +125,17 @@
 
 </section>
 
-<section id='channel' class='position-relative' style="height: 180vh;">
+<section id='channel' >
 
 
 
-  <div id='c-box-1' class='position-absolute top-50 start-50 translate-middle container'>
+  <div id='c-box-1' class='container' style = 'margin-top: 90vh; margin-bottom: 90vh;'>
     <p class='SubTitle_1 Gray_2 mb-5'>Official Channel</h5>
     <p class='Gray_1 Title_1'>CN.AI의 다양한 채널을 만나보세요.</h1>
 
-    <div class='row' style="height: 50vh">
-      <div class='col'>
-        <div class='col-12'>
+    <div class='row' >
+      <div class='col-12 col-md'>
+        <div class='col'>
           <div class="card p-4 h-100 Gray_5_bg border-0">
             <div class="row g-0 h-100 ">
 
@@ -145,17 +145,20 @@
                   <p class="Label Gray_2 mb-0">Instagram</p>
                   <p class="Title_2_eng Gray_1">cnai.ai</p>
 
-                  <a href="https://www.instagram.com/cnai.ai/" target = '_blank' class="mt-auto Gray_2"><i class="bi bi-arrow-right-circle"
+                  <a href="https://www.instagram.com/cnai.ai/" target = '_blank' class="mt-auto Gray_2 d-none d-md-block">
+                    <i class="bi bi-arrow-right-circle"
                       style="font-size: 3rem;"></i></a>
                 </div>
               </div>
               <div class="col-md-4">
+                <a href="https://www.instagram.com/cnai.ai/" target = '_blank'>
                 <img src="img/4/01 cnaiai.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+              </a>
               </div>
             </div>
           </div>
         </div>
-        <div class='col-12 mt-4'>
+        <div class='col mt-4'>
           <div class="card p-4 h-100 Gray_5_bg border-0">
             <div class="row g-0 h-100 ">
 
@@ -165,41 +168,43 @@
                   <p class="Label Gray_2 mb-0">Instagram</p>
                   <p class="Title_2_eng Gray_1">cn.table</p>
 
-                  <a href="https://www.instagram.com/cn.table/" target = '_blank' class="mt-auto Gray_2"><i class="bi bi-arrow-right-circle"
+                  <a href="https://www.instagram.com/cn.table/" target = '_blank' class="mt-auto Gray_2 d-none d-md-block "><i class="bi bi-arrow-right-circle"
                       style="font-size: 3rem;"></i></a>
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="img/4/02 cntable.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+                <a href="https://www.instagram.com/cn.table/" target = '_blank'>
+                  <img src="img/4/02 cntable.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+                </a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class='col'>
-        <div class="card p-4 h-100 Gray_5_bg border-0">
+      <div class='col-12 col-md m-height'>
+        <div class="card p-4 h-100 Gray_5_bg border-0 mt-md-0 mt-3">
           <div class="row g-0 h-100 ">
 
             <div class="col-md-8 h-100">
-              <div class="card-body d-flex flex-column h-100">
+              <div class="card-body d-flex flex-column h-100" id = 'mobile-1'>
 
                 <p class="Label Gray_2 mb-0">GitHub.io</p>
                 <p class="Title_2_eng Gray_1">Tech blog</p>
 
-                <a href="#" target = '_blank' class="mt-auto Gray_2"><i class="bi bi-arrow-right-circle" style="font-size: 3rem;"></i></a>
+                <a href="#" target = '_blank' class="mt-auto Gray_2 d-none d-md-block "><i class="bi bi-arrow-right-circle" style="font-size: 3rem;"></i></a>
               </div>
             </div>
             <div class="col-md-4">
+              <a href="#" target = '_blank' >
               <img src="img/4/03 github.png" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+            </a>
             </div>
           </div>
         </div>
-
-
       </div>
-      <div class="col">
+      <div class="col-md col-12 m-height">
 
-        <div class="card p-4 h-100 Gray_5_bg border-0">
+        <div class="card p-4 h-100 Gray_5_bg border-0 mt-md-0 mt-3">
           <div class="row g-0 h-100 ">
 
             <div class="col-md-8 h-100">
@@ -208,7 +213,7 @@
                 <p class="Label Gray_2 mb-0">Youtube</p>
                 <p class="Title_2_eng Gray_1">CNAI</p>
 
-                <a href="https://www.youtube.com/channel/UC2VAxP6sgZWvlVNpaNxMXLQ" target = '_blank' class="mt-auto Gray_2"><i class="bi bi-arrow-right-circle" style="font-size: 3rem;"></i></a>
+                <a href="https://www.youtube.com/channel/UC2VAxP6sgZWvlVNpaNxMXLQ" target = '_blank' class="mt-auto Gray_2 d-none d-md-block "><i class="bi bi-arrow-right-circle" style="font-size: 3rem;"></i></a>
               </div>
             </div>
             <div class="col-md-4">
