--- a/views/community.html
+++ b/views/community.html
@@ -80,7 +80,7 @@
             <p class='mt-auto Label Gray_1 date' style='bottom:7vh;' aria-label = 'Date'>{{ i.content2 }}</p>
           </div>
           <div class='col-md-4 '>
-            <img src="/img/1.jpeg" class="img-fluid h-100" alt="...">
+            <img src="/img/4/{{i.content2}}.png" class="img-fluid h-100" alt="{{ i.title }}">
           </div>
         </a>
         {% endif %}
