--- a/views/index.html
+++ b/views/index.html
@@ -112,8 +112,11 @@ Class name automatically added to element */
         </div>
 
         <div class='row'>
+          <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
+            <img src="img/home/-2.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
+            더하는 AI Human">
 
-          <div class="bg-purple mb-4 " id='tech' style='height: 70vh;'>
+          <div class=" mb-4 card-img-overlay  c1-img" id='tech' style='height: 70vh;'>
             <div class="container c1-img d-flex flex-column h-100 p-4">
               <div class='row g-0 h-100'>
                 <div class='col d-flex flex-column '>
@@ -132,11 +135,16 @@ Class name automatically added to element */
               </div>
             </div>
           </div>
+          </div>
         </div>
         <div class="row gy-3">
           <div class="col-md-6 col-12 ps-0 pe-md-3 pe-0">
 
-            <div class="bg-purple mb-4 " id="" style="height: 100%">
+            <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
+              <img src="img/home/-1.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
+              더하는 AI Human">
+
+            <div class=" mb-4 card-img-overlay  c2-img" id="" style="height: 100%">
               <div class="container c2-img d-flex flex-column h-100 p-4">
                 <div class="row g-0 h-100">
                   <div class="col-md-6 col-12 d-flex flex-column ">
@@ -156,6 +164,8 @@ Class name automatically added to element */
               </div>
             </div>
 
+            </div>
+
           </div>
           <div class="col-md-6 col-12 pb-0">
             <div class="row">
@@ -173,7 +183,7 @@ Class name automatically added to element */
                       </div>
                     </div>
                     <div class="col align-self-end">
-                      <button onclick="showUp($(this).attr('id'),'1')" id="c3"
+                      <button onclick="showUp($(this).attr('id'),'home')" id="c3"
                         class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c3-btn">
                         <img class="btn-sm-1" src="img/icon/00 more-dark.png">
                       </button>
@@ -193,7 +203,7 @@ Class name automatically added to element */
 
                     </div>
                     <div class="col align-self-end">
-                      <button onclick="showUp($(this).attr('id'),'home')" id=""
+                      <button 
                         class="align-items-baseline border-0 Title_3 bg-transparent float-end mb-3">
                         <img class="btn-sm-1" src="img/icon/02 arrow-right-circle-dark.png">
                       </button>
