--- a/views/base.html
+++ b/views/base.html
@@ -142,7 +142,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0" aria-label="최상단 메뉴" style="">
       <div class="container h-100">
-        <a class="navbar-brand w-gnb mb-2" href="/"> <img class="" src="/img/common/CNAI(white).png" width="80px"></a>
+        <a class="navbar-brand me-5 mb-2" href="/"> <img class="" src="/img/common/CNAI(white).png" width="80px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#gnb" aria-controls="gnb"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -150,7 +150,7 @@
 
         <div class="collapse navbar-collapse" id="gnb">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 Body_2_eng h-100">
-            <li class="nav-item  my-auto lineOn text-center ms-4">
+            <li class="nav-item  my-auto lineOn text-center ms-3">
               <a class="nav-link text-uppercase Gray_5 h-100 py-0 " href="/company">company</a>
             </li>
 
